# texas-gas-grid

./: .gitignore  README.md  pyproject.toml
data/Texas7k_Gas/: Texas7k_Gas.json
data/Travis150/: Travis150_Gas.json  Travis150_Gas_Data.xlsx  convert.py
src/: converters.py  logger.py  main.py  parser.py  typedefs.py
